<resources>
    <string name="app_name">Lyrics</string>

    <!-- Search dialog -->
    <string name="artist_hint">Artist</string>
    <string name="song_hint">Song</string>
    <string name="search_button">Search</string>

    <!-- Menu -->
    <string name="home_menu">Home</string>
    <string name="search_current_menu">Search current</string>
    <string name="search_menu">Search</string>
    <string name="settings_menu">Settings</string>
    <string name="lyrics_action_mode_copy">Copy</string>
    <string name="lyrics_action_mode_select_all">Select all</string>

    <!-- Autocomplete -->
    <string name="delete_autocomplete_title">Delete</string>
    <string name="delete_autocomplete_message">Are you sure you want to delete this suggestion?</string>

    <!-- Errors -->
    <string name="error_lyrics_not_found">Lyrics not found, sorry.</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_offline">You are currently offline. Please connect to the Internet in order to get lyrics.</string>
    <string name="error_dialog_unknown">Unknown error. Please retry later.</string>

    <!-- Settings -->
    <string name="setting_auto_search_label">Auto search</string>
    <string name="setting_auto_search_descr">Automatically search for songs</string>
    <string name="setting_delete_recents_label">Delete recent searches</string>
    <string name="setting_delete_recents_descr">All the recent searches will be deleted\n<b>Warning</b>: cannot undo</string>
    <string name="dialog_delete_recents_title">Delete recent searches</string>
    <string name="dialog_delete_recents_message">Are you sure you want to delete all recent searches?</string>

    <!-- Toasts -->
    <string name="lyrics_lines_copied">Copied to clipboard!</string>

</resources>
