<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="100"
        android:title="@string/home_menu"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_search_current"
        android:icon="@drawable/ic_search_current_48"
        android:orderInCategory="200"
        android:title="@string/search_current_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_48"
        android:orderInCategory="300"
        android:title="@string/search_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="400"
        android:title="@string/settings_menu"
        app:showAsAction="never" />
</menu>