<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.andrea.lyrics.SettingsActivity">

    <LinearLayout
        android:id="@+id/layout_auto_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/sm_padding">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_auto_search_label"
                android:gravity="center_vertical"
                android:textSize="@dimen/setting_text_size" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_auto_search_descr" />
        </LinearLayout>
        <Switch
            android:id="@+id/auto_search_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_delete_recents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/sm_padding">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_delete_recents_label"
                android:gravity="center_vertical"
                android:textSize="@dimen/setting_text_size" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_delete_recents_descr" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
